Reformatting fixes